# dstack

./: .gitignore  Cargo.toml  run.sh
basefiles/: csv-attest.conf  dstack-prepare.sh
cert-client/: Cargo.toml
cert-client/src/: lib.rs
csv-attest/: Cargo.toml  Makefile
csv-attest-sys/: Cargo.toml  build.rs
csv-attest-sys/sdk/: csv_sdk.h  csv_status.c  csv_status.h  ioctl_get_attestation_report.c  ioctl_get_sealing_key.c
csv-attest-sys/src/: lib.rs
csv-attest/examples/: rtmr_demo.rs
csv-attest/src/: lib.rs  rtmr.rs
dstack-util/: Cargo.toml
dstack-util/src/: host_api.rs  main.rs  system_setup.rs
dstack-util/src/system_setup/: config_id_verifier.rs
gateway/: gateway.toml
gateway/src/: main.rs
guest-agent/: Cargo.toml  dstack.toml
guest-agent/src/: rpc_service.rs
kms/: kms.toml
kms/auth-eth/: package-lock.json
kms/auth-eth/contracts/: AppAuth.sol  KmsAuth.sol
kms/auth-eth/src/: ethereum.ts  server.ts  types.ts
kms/auth-eth/typechain-types/factories/contracts/: AppAuth__factory.ts  KmsAuth__factory.ts
kms/dstack-app/: compose-dev-1.yaml  compose-dev.yaml  deploy-to-vmm.sh  entrypoint.sh
kms/dstack-app/dstack/: pyvenv.cfg
kms/rpc/proto/: kms_rpc.proto
kms/src/: config.rs  crypto.rs  key_version.rs  main.rs  main_service.rs  onboard_service.rs
kms/src/main_service/: upgrade_authority.rs
mod-csv-guest/: Makefile  mod.c
ra-tls/: Cargo.toml
ra-tls/src/: attestation.rs  cert.rs  lib.rs  oids.rs
supervisor/: Cargo.toml
vmm/: vmm.toml
vmm/src/: vmm-cli.py
vmm/src/app/: qemu.rs
