[package]
name = "csv-attest"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[example]]
name = "csv_attest_demo"
path = "examples/csv_attest_demo.rs"

[[example]]
name = "rtmr_demo"
path = "examples/rtmr_demo.rs"

[dependencies]
csv-attest-sys = { workspace = true }
anyhow.workspace = true
thiserror.workspace = true
cc-eventlog.workspace = true
serde.workspace = true
serde_json.workspace = true
fs-err.workspace = true
num_enum.workspace = true
rand = "0.8"
tempfile = "3.0"
hex = "0.4"
sha2 = "0.10"
serde-human-bytes.workspace = true

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"